@startuml
'https://plantuml.com/class-diagram
!theme vibrant
class Utente{
  +email: String
  +password: String
  +nome: String
  +cognome: String
  +dataNascita: Date
  +sesso: sesso
  +codiceFiscale: String
}
class Gestore {
  +nome: String
  +descrizione: String
  +sede: struct [Città: String, Via: String, Civico: String, Provincia: String, Cap: Integer]
  +email: String
  +password: String
  +telefono: String
  +cod.Gestore: String
}
class Operatore{

  +cod.Operatore
}
class Studente{
  +cod.Studente
}
enum sesso{
M
F
}
Utente <|-- Operatore
Utente <|-- Studente
Gestore "1" -- "0..*" Corso
Corso "*" -- "*" Studente
Corso "1" -- "1..*" Operatore
class Corso{
  +titolo: String
  +descrizione: String
  +iscrizioniMassime: double
  +tassoPresenzeMinime: float
  +cod.Corso: String
}
class Lezione{
  +titolo: String
  +descrizione: String
  +dataInizio: Date
  +oraInizio:
  +cod.Lezione: String
}
Corso "1" -- "1..*" Lezione
(Corso, Studente) .. Iscritti
Lezione "1" -- "*" Studente
class Iscritti{
+idonei: boolean
}
class Statistiche{
  presenzeMinime
  presenzeMassime
  presenzeMedie
  percentualeRiempimentoMedia
}
Corso "1" -- "1" Statistiche
@enduml